--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,7 +1,7 @@
 body {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-size: 20px;
-  background-color: #e7ec89;
+  background: #e7ec89 url(sand.jpg) repeat;
   display: flex;
   flex-direction: column;
 }
@@ -28,7 +28,7 @@ h1 {
 }
 
 #sidebar {
-  background: #e7ec89 url(sand.jpg);
+  background: #e7ec89;
   padding: 5px;
   margin-top: 15px;
   margin-bottom: 15px;
