--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -34,14 +34,17 @@ h1 {
   margin-bottom: 15px; */
 }
 
-#contents {
+#contents1 {
   background-color: #ffc;
   /* padding: 5px;
   margin-top: 15px;
-  margin-bottom: 15px; */
-  flex: 3;
+  margin-bottom: 15px;
+  flex: 3; */
 }
 
+#contents2 {
+  background-color: #e7ec89;
+}
 
 a {
   text-decoration: none;
@@ -63,8 +66,8 @@ h2 {
 }
 
 #profilephoto {
-  height: 200px;
-  width: 200px;
+  height: 250px;
+  width: 250px;
   border-radius: 50%;
   border-width: 4px;
   border-color: #f2f4c0;
