--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,7 +1,7 @@
 body {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-size: 20px;
-  background: #e7ec89 url(sand.jpg) repeat;
+  background-color: #e7ec89;
   display: flex;
   flex-direction: column;
   margin: 0;
@@ -18,7 +18,7 @@ header {
 footer {
   background-color: #D37815;
   text-align: center;
-  padding: 10px;
+  /* padding: 10px; */
   margin-bottom: 5px;
 }
 
@@ -30,6 +30,9 @@ h1 {
 
 #contents1 {
   text-align: center;
+  background: #e7ec89 url(canva.png);
+  width: auto;
+  height: 50vw;
 }
 
 #contents2, #contents1, #contents3  {
@@ -50,7 +53,7 @@ a {
 }
 
 a:hover {
-color:#D37815; 
+color:#D37815;
 }
 
 h2 {
@@ -134,6 +137,10 @@ h5 {
   .nav-menu {
     background-color: #CAD315;
   }
+
+  #contents1 {
+  background: #e7ec89;
+  }
 }
 
 /* Medium devices (landscape tablets, 700px and up) */
@@ -143,6 +150,9 @@ h5 {
     flex-direction: column;
     overflow: unset;
   }
+  #contents1 {
+    background: #e7ec89;
+    }
 }
 
 /* Large devices (laptops/desktops, 1200px and up) */
@@ -152,4 +162,7 @@ h5 {
     flex-direction: column;
     overflow: unset;
   }
+  #contents1 {
+    background: #e7ec89 url(canva.png);
+    }
 }
