--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,9 +1,13 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-size: 20px;
   background-color: #e7ec89;
-  display: flex;
-  flex-direction: column;
+  display:block;
+  block-size: auto;
   margin: 0;
 }
 
@@ -23,9 +27,11 @@ footer {
 }
 
 h1 {
-  color: #ffc;
+  color: #D37815;
   font-family: Georgia, 'Times New Roman', Times, serif;
   font-size: 45px;
+  text-align: right;
+  margin-top: 20%;
 }
 
 #contents1 {
@@ -66,18 +72,29 @@ h2 {
   font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
-#profilephoto {
-  height: 250px;
-  width: 250px;
-  border-radius: 50%;
+/* #profilePhoto {
+  height: 30vw;
+  width: 0vw;
+  border-radius: 10%;
   border-width: 4px;
   border-color: #f2f4c0;
   border-style: solid;
+  display: flex;
+  flex-direction: initial;
+  margin-top: 7vw;
+} */
+
+#statement1 {
+  font-size: 25px;
+  color: #290001;
+  text-align: right;
 }
 
-#statement {
+#statement2 {
   font-size: 25px;
-  color: #290001
+  color: #290001;
+  font-style: italic;
+  text-align:right;
 }
 
 #logo1, #logo2, #logo3 {
