--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -36,7 +36,7 @@ h1 {
 
 #contents1 {
   text-align: center;
-  background: #e7ec89 url(canva.png);
+  background: #e7ec89 url(new.png);
   width: auto;
   height: 50vw;
 }
