--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -29,19 +29,19 @@ footer {
 h1 {
   color: #D37815;
   font-family: Georgia, 'Times New Roman', Times, serif;
-  font-size: 45px;
-  text-align: right;
+  font-size: 90px;
   margin-top: 20%;
+  justify-content: center;
+  align-items: center;
 }
 
 #contents1 {
   background: #ffc url(new.png);
   width: auto;
   height: 88vh;
-}
-
-#carouselExampleIndicators {
-  justify-content: left;
+  text-align: right;
+  justify-content: center;
+  align-items: center;
 }
 
 #contents2, #contents3, #contents4  {
@@ -84,17 +84,10 @@ h2 {
   margin-top: 7vw;
 } */
 
-#statement1 {
-  font-size: 25px;
-  color: #290001;
-  text-align: right;
-}
-
-#statement2 {
+#statement {
   font-size: 25px;
   color: #290001;
   font-style: italic;
-  text-align:right;
 }
 
 #logo1, #logo2, #logo3 {
