--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -57,6 +57,33 @@ footer {
   font-size: 25px;
 }
 
+#codeSpace, #coursera, #uhs{
+  width: 100px;
+  height: 100px;
+  margin-left: 20px;
+  margin-bottom: 5px;
+  margin-top: 15px;
+  display: inline;
+  justify-content: space-between;
+}
+
+#badges {
+
+}
+
+
+/* #codeSpace {
+ flex: 2;
+}
+
+#coursera {
+  flex: 2;
+}
+
+#uhs {
+ flex: 2; 
+} */
+
 a {
   text-decoration: none;
   color: #290001
