--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -202,6 +202,12 @@ h5 {
     text-align: center;
 }
 
+#organisations {
+  position:relative;
+  top: 5%;
+  text-align: center;
+}
+
 /*Media Queries*/
 
 /*Small devices (mobile phones/portrait tablets, less than 700px*/
