--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -46,7 +46,13 @@ footer {
   text-align: center;
 }
 
-#contents2, #contents3, #contents4, #contents5, #contents6 {
+#contents6 {
+  justify-content: center;
+  text-align: center;
+  display: center;
+}
+
+#contents2, #contents3, #contents4, #contents5, #contents6, #contents7 {
   background-color: #ffc;
   height: 100vh;
   text-align: center;
