--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -4,11 +4,11 @@
 
 body {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  font-size: 20px;
   background-color: #e7ec89;
   display:block;
   block-size: auto;
   margin: 0;
+  color:#290001
 }
 
 header {
@@ -55,11 +55,11 @@ footer {
   text-align: center;
 }
 
-#intro {
+/* #intro {
   text-align: center;
   color: #290001;
   font-size: 20px;
-}
+} */
 
 #codeSpace, #coursera, #uhs{
   width: 10vw;
